fix gitignore and track frontend

--- a/.gitignore
+++ b/.gitignore
@@ -82,5 +82,7 @@ agenthub/agents/youtube/db
 .cache/
 
 # Mobile development
-android-sdk/ frontend/node_modules/.cache/default-development/0.pack
+android-sdk/
+frontend/node_modules/
+frontend/node_modules/.cache/
 frontend/node_modules/.cache/default-development/0.pack
